Update asset path to be configurable and support ingredients repository to only return system ingredients
