# src/routes/assets.ts
@@ -1,5 +1,13 @@
 import express from "express";
 import type { CreateRouter } from "./route.ts";
 
-export const createAssetsRouter: CreateRouter = () =>
-    express.Router().use("/assets", express.static("src/assets"));
+export type AssetsRouterConfig = {
+    assetDirectory: string;
+};
+
+export const createAssetsRouter: CreateRouter<
+    never,
+    never,
+    AssetsRouterConfig
+> = ({ assetDirectory }) =>
+    express.Router().use("/assets", express.static(assetDirectory));
